--- a/renovate.json
+++ b/renovate.json
@@ -5,12 +5,11 @@
   },
   "packageRules": [
     {
-      "description": "Don't upgrade to Angular 17(yet)",
+      "description": "Don't upgrade to Angular 17 (yet)",
       "matchPackageNames": [
         "angular"
       ],
-      "allowedVersions": "<17.0.0",
-      "groupName": "frontend-libraries"
+      "allowedVersions": "<17.0.0"
     },
     {
       "managers": [
@@ -20,15 +19,6 @@
         "*"
       ],
       "groupName": "frontend-libraries"
-    },
-    {
-      "managers": [
-        "maven"
-      ],
-      "packagePatterns": [
-        "*"
-      ],
-      "groupName": "backend-libraries"
     }
   ]
 }
